--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -23,3 +23,133 @@ html {
     margin: 0 auto 0 auto; /*Define que o container vai ficar centralizado*/
     /*margin: 0 auto; maneira alternativa para a linha de cima*/
  }
+
+header {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/banner.jpg); 
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+}
+
+h1 {
+    margin-top: 0;
+    color: #fff;
+    font-size: 240%;
+    text-transform: uppercase;
+    word-spacing: 4px;
+    letter-spacing: 1px;
+    font-weight: 300;
+}
+
+.hero-text-box {
+    position: absolute;
+    width: 1000px; /*verificar se esse valor é adequado para seu monitor*/
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+}
+
+.btn {
+    display: inline-block;
+    padding: 10px 30px;
+    font-weight: 300;
+    text-decoration: none;
+    border-radius: 200px;
+    color: #fff;
+}
+
+.btn-full {
+    background-color: #2c3e50;
+}
+
+.btn-ghost {
+    /* Posso deixar igual o Btn-full, ai eu vejo dps*/
+    color: #2c3e50;
+    border: 1px solid #2c3e50;
+}
+
+.btn:link,
+.btn:visited {
+    display: inline-block;
+    padding: 10px 30px;
+    font-weight: 300;
+    text-decoration: none;
+    border-radius: 200px;
+    color: #fff;
+    transition: background-color 0.2s, border 0.2s, color 0.2s;
+}
+
+.btn-full:link,
+.btn-full:visited  {
+    background-color: #2c3e50;
+    border: 1px solid #2c3e50;
+    color: #fff;
+    margin-right: 15px; /*Espaçamento entre os botões */
+}
+
+.btn-ghost:link,
+.btn-ghost:visited  {
+    border: 1px solid #2c3e50;
+    color: #2c3e50;
+}
+
+.btn:hover,
+.btn:active {
+    background-color: #2c3e50;
+}
+
+.btn-full:hover,
+.btn-full:active {
+    border: 1px solid #2c3e50;
+}
+
+.btn-ghost:hover,
+.btn-ghost:active {
+    border: 1px solid #2c3e50;
+    color: #fff;
+}
+
+.logo {
+    height: 100px;
+    width: auto;
+    float: left;
+    margin-top: 20px; /*colocar um espaçamento acima da logo para baixar ela*/
+}
+
+.main-nav {
+    float: right;
+    list-style: none; /*Se livra dos bullets - bolinhas pretas - marcadores*/
+    margin-top: 55px;
+}
+
+.main-nav li {
+    display: inline-block;
+    margin-left: 40px;
+}
+
+.main-nav li a {
+    padding: 8px 0;
+    color: #fff;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 90%;
+    border-bottom: 2px solid transparent;
+    transition: border-bottom 0.2s;
+}
+
+.main-nav li a:link,
+.main-nav li a:visited {
+    padding: 8px 0;
+    color: #fff;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 90%;
+    border-bottom: 2px solid transparent;
+    transition: border-bottom 0.2s;
+}
+
+.main-nav li a:hover,
+.main-nav li a:active {
+    border-bottom: 2px solid #2c3e50;
+}
