--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -220,3 +220,38 @@ h2:after {
 .section-features .long-copy {
     margin-bottom: 30px;
 }
+
+.images-showcase {
+    list-style: none; /*Retira marcadores*/
+    width: 100%; 
+}
+
+.images-showcase li {
+    display: block;  /*permite outros elementos ao lado*/
+    float: left; /*Faz com que os elementos sejam colocados lado a lado*/
+    width: 25%;  /*cada item da lista terá 25% de largura em relação a tela... 100/4*/
+}
+
+.photo {
+    width: 100%;
+    margin: 0;
+    overflow: hidden;
+    background-color: #000; /*Cor de fundo - preto*/
+}
+
+.photo img {
+    opacity: 0.7;
+    width: 100%;
+    height: auto;
+    transform: scale(1.15); /*imagem aumentada em 15%*/
+    transition: transform 0.5s, opacity 0.5s; /*Adiciona um período de transição quando alterado houver alteração da propriedade transform*/
+}
+
+.photo img:hover {
+    opacity:1;
+    transform: scale(1.03); /*escala da imagem com valor padrão*/
+}
+
+.section-photos {
+    padding: 0;
+}
