--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -255,3 +255,69 @@ h2:after {
 .section-photos {
     padding: 0;
 }
+
+.section-steps {
+    background-color: #f4f4f4;
+}
+
+/*Regra para ambos os boxes/containers*/
+.steps-box {
+}
+
+.steps-box:first-child {
+    margin-top: 30px;
+    text-align: right; /*textos ou conteúdos do tipo inline (ex. img) alinhados à direita*/
+    padding-right: 3%; /*usamos porcentagem para ser responsivo*/
+}
+
+.steps-box:last-child {
+    text-align: left;
+    padding-left: 3%; /*usamos porcentagem para ser responsivo*/
+    margin-top: 70px;
+}
+
+.app-screen {
+    width: 40%; /*40% do tamanho do box/container*/
+}
+
+.step {
+    margin-bottom: 50px;
+}
+
+.step div {
+    color: #e67e22; /*Define cor da fonte*/
+    border: 2px solid #e67e22; /*define uma borda laranja*/
+    display: inline-block;/*para permitir containers lado a lado*/
+    border-radius: 50%; /*Arredonda as bordas*/
+    height: 55px;/*Define altura*/
+    width: 55px;/*Mesmo valor da altura, afinal queremos um circulo*/
+    /*Ajustando o texto interno*/
+    text-align: center;/*Texto centralizado na horizontal, não na vertical*/
+    padding: 5px;/*espaço entre texto e borda do container*/
+    float: left;
+    font-size: 150%;
+    margin-right: 30px;/*espaço entre essa div e o paragráfo - talvez varie de acordo com o tamanho dos paragráfos*/
+}
+
+.btn-app img {
+    height:50px;
+    width: auto;
+    margin-right: 10px;
+}
+
+.step:last-of-type {
+    margin-bottom: 80px;
+}
+
+.clearfix {
+    zoom:1;
+    }
+    
+    /*limpa o float depois de um elemento.*/
+    .clearfix:after {
+        content: '.';
+        clear: both;
+        display: block;
+        height:0;
+        visibility:hidden;
+    }
